# homeassistant-neeo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/neeo/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  scene.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/neeo/translations/: en.json
docs/: ARCHITECTURE.md  NEEO_API_NOTES.md
pyneeo/: __init__.py  client.py  discovery.py  events.py  exceptions.py  listener.py  models.py
tests/: test_client.py  test_events.py  test_listener.py  test_models.py
